@@ -6,7 +6,7 @@ Connection request from [127.0.0.1]
 EHLO the.local.host.name
 250-OK
 250 HELP
-MAIL FROM:<CALLER@the.local.host.name>
+MAIL FROM:<>
 250 OK
 RCPT TO:<userx@domain1>
 250 OK
@@ -32,7 +32,7 @@ Connection request from [127.0.0.1]
 EHLO the.local.host.name
 250-OK
 250 HELP
-MAIL FROM:<CALLER@the.local.host.name>
+MAIL FROM:<>
 250 OK
 RCPT TO:<userx@domain2>
 250 OK
@@ -64,7 +64,20 @@ Connection request from [127.0.0.1]
 EHLO the.local.host.name
 250-OK
 250 HELP
-MAIL FROM:<CALLER@the.local.host.name>
+MAIL FROM:<>
+250 OK
+RCPT TO:<userx@domain1>
+450 NOT RIGHT NOW
+QUIT
+220 OK
+End of script
+Listening on port 1224 ... 
+Connection request from [127.0.0.1]
+220 ESMTP
+EHLO the.local.host.name
+250-OK
+250 HELP
+MAIL FROM:<>
 250 OK
 RCPT TO:<userx@domain1>
 550 GO AWAY
